--- a/sheet/fun.css
+++ b/sheet/fun.css
@@ -1,2 +1,13 @@
-
-
+img {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 5px;
+  width: 150px;
+    box-shadow: 0 0 10px 4px rgba(0, 140, 186, 0.5)
+}
+p{
+    background-color: antiquewhite;
+    border-radius: top left:5px bottom right:5px ;
+    padding: 10px;
+    text-align:justify;
+}
